Refactor and update codebase for improved security and functionality
- Removed deprecated commons-httpclient dependency from pom.xml.
- Updated copyright year in TLSSocketFactory.java and PSDispatcherFilter.java to 2026.
- Removed PSBrowserDetect.java as it is no longer needed.
- Simplified addSitePrefixFromReferer method in PSDispatcherFilter.java by removing unnecessary URI parsing.
- Enhanced XML parsing security in PSXPathEvaluator.java using PSSecureXMLUtils.
- Updated XMLParserUtils.java to utilize secure XML parsing methods to prevent XXE attacks.
- Added comprehensive tests for ps/compat.js to ensure compatibility with Dojo 0.4 API.